# langchain-gepa-adapter

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: aime.py  big_number_arithmetic.py  gsm8k.py  pair_sum_product.py
notebooks/: pair_sum_product_walkthrough.ipynb
src/langchain_gepa_adapter/: __init__.py  adapter.py  chat_model.py  logging.py  proposer.py
