[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-gepa-adapter"
version = "0.1.0"
description = "GEPA adapter for LangChain v1 chat models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "bkuchars" }]
dependencies = [
    "gepa>=0.0.5",
    "langchain>=1.0",
    "langchain-core>=1.0",
]

[project.optional-dependencies]
examples = [
    "langchain-openai>=0.3",
    "datasets>=2.14",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "pandas>=2.0",
]

[project.urls]
Repository = "https://github.com/bkuchars/langchain-gepa-adapter"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_gepa_adapter"]
